--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-project",
   "version": "0.1.0",
+  "packageManager": "pnpm@latest",
   "private": true,
   "scripts": {
     "dev": "next dev",
